Workflow/App_Plugins/Workflow/Backoffice/css/listview.scss
@import "_variables";

// listview for history views
.umb-table {
    border-radius:3px;
}

.umb-table-cell {
    ul {
        margin: 0;
    }

    &.show-overflow, &.show-overflow > * {
        overflow: visible;
    }
}

.controls {
    h5 {
        margin-top: 0;
    }
}

.control-panel {
    padding: 10px 0;
    margin: 10px 0;
}


.dropdown-menu {
    .warning {
        color: $warning;
    }

    .danger {
        color: $danger;
    }
}

.table-row-outer {
    .umb-table-row {
        &:not(:first-child) {
            border-top: none;

            i {
                opacity: 0;
            }
        }
    }
}

.umb-table__input[type=checkbox] {
    opacity: 0;
    cursor: default;
}

.umb-table-body__icon.soft {
    opacity: .25;
}

/* colours will be available for all elements in the .workspace namespace */
.pending {
    color: $pending;

    .umb-table-body__icon {
        color: $pending;
    }
}

.approved {
    color: $success;
}

.cancelled {
    color: $danger;
}

.rejected, .resubmitted {
    color: $warning;

    i, a {
        color: $warning;
    }
}

.action-dialog {
    .not-required {
        color:$pending;
    }
    .rejected {
        color: $danger;
    }
}

